--- a/card.css
+++ b/card.css
@@ -5,6 +5,17 @@ body
     margin: 0;
 }
 
+@media only screen and (min-width: 300px) {
+  body {
+	  
+	  background-image: linear-gradient(to right top, #1f0537, #380c60, #55108c, #7413bb, #9612eb);
+    height: 100%;
+    margin: 0;
+  }
+}
+
+
+
 .card {
 	 position: relative;
 	 width: 300px;
