--- a/card.css
+++ b/card.css
@@ -3,6 +3,8 @@ body
   background-image: linear-gradient(to right top, #1f0537, #380c60, #55108c, #7413bb, #9612eb);
     height: 100%;
     margin: 0;
+    background-repeat:repeat;
+    background-attachment: fixed;
 }
 
 @media only screen and (min-width: 300px) {
@@ -11,6 +13,8 @@ body
 	  background-image: linear-gradient(to right top, #1f0537, #380c60, #55108c, #7413bb, #9612eb);
     height: 100%;
     margin: 0;
+	    background-repeat:repeat;
+    background-attachment: fixed;
   }
 }
 
