--- a/card.css
+++ b/card.css
@@ -3,6 +3,7 @@ body
   background-image: linear-gradient(to right top, #1f0537, #380c60, #55108c, #7413bb, #9612eb);
     height: 100%;
     margin: 0;
+	background-repeat:no-repeat; 
     background-attachment: fixed;
 }
 
@@ -12,7 +13,7 @@ body
 	  background-image: linear-gradient(to right top, #1f0537, #380c60, #55108c, #7413bb, #9612eb);
     height: 100%;
     margin: 0;
-	    
+	background-repeat:no-repeat;   
     background-attachment: fixed;
   }
 }
